<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textViewSettings"
            android:text="@string/settings"
            android:layout_width="361dp"
            android:layout_height="66dp"
            android:textSize="30sp"
            android:fontFamily="@font/nkfree"
            android:gravity="center"
            android:background="@drawable/rounded_corner_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/textViewSound"
            android:text="@string/sound"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:paddingLeft="10sp"
            android:paddingTop="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewSettings"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <Switch
            android:id="@+id/switchSound"
            android:text="@string/on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewSettings"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toEndOf="@+id/textViewSound"
            android:layout_marginStart="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/language"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:id="@+id/textViewLanguage"
            android:paddingLeft="10sp"
            android:paddingTop="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewSound"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <TextView
            android:id="@+id/textViewTextSize"
            android:text="Text size"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:paddingLeft="10sp"
            android:paddingTop="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLanguage"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <Button
            android:id="@+id/buttonApplyChanges"
            android:layout_width="361dp"
            android:layout_height="66dp"
            android:textSize="30sp"
            android:text="apply"

            android:fontFamily="@font/nkfree"

            android:backgroundTint="@color/transparent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="76dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage"
            app:layout_constraintVertical_bias="0.898"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@+id/switchSound"
            android:layout_marginTop="88dp"
            app:layout_constraintStart_toEndOf="@+id/textViewLanguage"
            android:layout_marginStart="36dp"/>

    <Spinner
            android:id="@+id/spinnerTextSize"
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toEndOf="@+id/textViewTextSize"
            android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage"
            android:layout_marginTop="60dp"/>
    <EditText
            android:layout_width="247dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextCity"
            android:gravity="start"
            android:paddingLeft="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTextSize"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="79dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:gravity="start"
            android:id="@+id/editTextTextCountryCode"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTextSize" android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintStart_toEndOf="@+id/editTextCity" app:layout_constraintHorizontal_bias="0.882"/>

</androidx.constraintlayout.widget.ConstraintLayout>